Update description in index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <div class="card" role="main">
     <h1>QR Code Generator</h1>
-    <p class="lead">Generates QR codes entirely in your browser — safe to host on GitHub Pages. Type text or a URL, tweak size & error level, then download.</p>
+    <p class="lead">Generates QR codes for Free. Type text or a URL, tweak size & error level, then download.</p>
 
     <div class="grid">
       <div>
