--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <button id="clear" class="ghost" type="button">Clear</button>
           </div>
 
-          <div class="meta">Tip: Paste any text or URL. The QR is generated locally — nothing leaves the browser.</div>
+          <div class="meta">Tip: Paste any text or URL. The QR is generated quickly and ad free!</div>
         </div>
       </div>
 
@@ -78,7 +78,9 @@
       </div>
     </div>
 
-    <footer>Static & privacy-friendly — ready for GitHub Pages.</footer>
+    <footer class="text-center text-sm text-gray-500 mt-10 py-4 border-t">
+  <p>© 2025 <strong>Shahid Ghafoor</strong> · Built with ❤️ for everyone · Privacy-friendly & static</p>
+</footer>
   </div>
 
   <!-- QRCode.js CDN -->
